--- a/.env_example
+++ b/.env_example
@@ -1,4 +1,16 @@
-db_settings=your_database_url(https://docs.sqlalchemy.org/en/14/core/engines.html#database-urls)
+# db settings (read by postgres)
+POSTGRES_USER=hello_world_user
+POSTGRES_PASSWORD=hello_world_pass
+POSTGRES_DB=volatabot
+# bot settings
+# db settings: define rather DATABASE_URL or by component as below (preferable)
+DATABASE_ENGINE=postgres
+DATABASE_PORT=5432
+DATABASE_HOST=db
+DATABASE_NAME=volatabot
+DATABASE_USER=hello_world_user
+DATABASE_PASSWORD=hello_world_pass
+# others
 kraken_api_key=your_kraken_api_key
 kraken_private_api_key=your_kraken_private_api_key
 telegram_api_key=your_chat_bot_api_key
