fixup! revert downgrade compose version: 3.8 -> 3.3

--- a/.env_example
+++ b/.env_example
@@ -1,13 +1,13 @@
 # db settings (read by postgres)
 POSTGRES_USER=hello_world_user
 POSTGRES_PASSWORD=hello_world_pass
-POSTGRES_DB=volatabot
+POSTGRES_DB=volatobot
 # bot settings
 # db settings: define rather DATABASE_URL or by component as below (preferable)
 DATABASE_ENGINE=postgres
 DATABASE_PORT=5432
 DATABASE_HOST=db
-DATABASE_NAME=volatabot
+DATABASE_NAME=volatobot
 DATABASE_USER=hello_world_user
 DATABASE_PASSWORD=hello_world_pass
 # others
