add logging instead of manual send: thus, we have traceback (#1)

--- a/.env_example
+++ b/.env_example
@@ -3,7 +3,8 @@ POSTGRES_USER=hello_world_user
 POSTGRES_PASSWORD=hello_world_pass
 POSTGRES_DB=volatobot
 # bot settings
-# db settings: define rather DATABASE_URL or by component as below (preferable)
+DEBUG=1
+## db settings: define rather DATABASE_URL or by component as below (preferable)
 DATABASE_ENGINE=postgres
 DATABASE_PORT=5432
 DATABASE_HOST=db
